--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -26,7 +26,7 @@ github_username: hfletcher
 
 # Build settings
 markdown: kramdown
-theme: minimal-mistakes-jekyll
+remote_theme: "mmistakes/minimal-mistakes@4.17.1"
 plugins:
   - jekyll-include-cache
 include:
