--- a/_config.yml
+++ b/_config.yml
@@ -26,11 +26,16 @@ github_username: hfletcher
 
 # Build settings
 markdown: kramdown
-remote_theme: "mmistakes/minimal-mistakes@4.17.1"
-plugins:
-  - jekyll-include-cache
+remote_theme: mmistakes/minimal-mistakes
 include:
-  - "_pages"
+  - _pages
+plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jemoji
+  - jekyll-include-cache
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
